<resources>
    <string name="app_name">On Road Vehicle Management</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="vehicle_name">vehicle name</string>
    <string name="username">Username</string>
    <string name="owner_name">Owner Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="vehicle_number">vehicle Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="useremail">UserEmail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">forget password</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="forget_password01">Forget Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="submit">Submit</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Your Name</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_an_account">you have an account</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>
    <string name="contact">Contact</string>
    <string name="mileage">Mileage</string>
    <string name="fuel">Fuel</string>
    <string name="situation">Situation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">update</string>
    <string name="vehicle_management">Vehicle Management</string>
    <string name="gps_tracking">GPS tracking</string>
    <string name="textview">TextView</string>
    <string name="on_road_vehicle_management">On Road Vehicle Management</string>
    <string name="menu">Menu</string>
    <string name="return_s">Return</string>
</resources>