<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0E0E6"
    tools:context=".Owner"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText

            android:id="@+id/edittext1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/mileage"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/grey" />

        <EditText

            android:id="@+id/edittext2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edittext1"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/fuel"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/edittext3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edittext2"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/contact"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/edittext4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edittext3"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/date"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/grey" />


        <EditText
            android:id="@+id/edittext6"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/edittext4"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/situation"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/edittext6"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/submit"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/btn1"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_rounded_corner"
            android:onClick="@string/view"
            android:text="@string/view"
            android:textStyle="bold" />

    </RelativeLayout>


</ScrollView>